<resources>
    <string name="app_name">URfit</string>
    <string name="start_workout_Button">Start Workout</string>
    <string name="meine_ergebnisse_Button">Meine Ergebnisse</string>
    <string name="profil_Button">Profil</string>
    <string name="aim_Button_text">meine Ziele</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="ergebnis_View_text">deine bisherigen Aktivitäten</string>
    <string name="gelaufene_zeit_view">Zeit: - </string>
    <string name="time_string">%1$s</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Start_Activity_Label">Workout</string>
    <string name="Ergebnis_Activity_Label">Auswertung</string>
    <string name="profile_Activity_Label">Mein Profil</string>
    <string name="aim_Activity_Label">Meine Ziele</string>
    <string name="stop_workout_Button">Stop Workout!</string>
    <string name="anzahl_schritte_view">bisher gelaufene Schritte: -</string>
    <string name="mein_persoehnliches_tagesziel_text">Mein persönliches Tagesziel:</string>
    <string name="Hauptziel_text">Mein großes Ziel:</string>


    <!-- Manuelles Tracking-->
    <!-- TextViews-->
    <string name="workout_distance">Entfernung in Meter: </string>
    <string name="time_spent">Dauer in Sekunden: </string>
    <string name="activity_date">Datum: </string>
    <string name="calories_loss">Kalorien: </string>
    <string name="button_add_activity">Aktivität hinzufügen</string>

    <!-- Profil -->
    <!-- TextViews -->
    <string name="profil_name">Name:</string>
    <string name="profil_gender">Geschlecht:</string>
    <string name="profil_steplength">Schritttlänge:</string>
    <string name="button_add_profil">Profildaten speichern</string>

    <!-- EditTexts -->
    <string name="edit_name">Enter Name</string>
    <string name="edit_gender">Enter Gender</string>
    <string name="edit_steplength">Enter Step Length</string>
    <string name="switchOnText">männlich</string>
    <string name="switchOffText">weiblich</string>

    <!-- Ergebnisse -->
    <string name="ergebnis_Kalorien">Kalorien</string>
    <string name="ergebnis_Schritte">Schritte</string>
    <string name="ergebnis_Datum">Datum</string>
    <string name="profile_start_level_text">Level 1</string>
    <string name="profile_start_name_text">Name: Max Mustermann</string>
    <string name="profile_start_gender_text">Geschlecht: männlich</string>
    <string name="profile_start_step_text">Schrittlänge: 74cm</string>
    <string name="profile_start_buttontext">Profil ändern</string>
    <string name="aims_titel_edit_hint">Titel</string>
    <string name="aims_steps_edit_hint">Anzahl Schritte</string>
    <string name="aims_addbutton_text">Hinzufügen</string>
    <string name="profile_change_female_text">Weiblich</string>
    <string name="profile_change_male_text">Männlich</string>

</resources>
