<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.profile_change_Activity">


    <TextView
        android:id="@+id/profil_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/profil_name"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profil_name_text"
        android:hint="@string/edit_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/profil_gender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_name"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/profil_gender"
        android:textSize="26sp" />


    <RelativeLayout
        android:id="@+id/switch_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profil_gender_text"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/profile_change_female_text"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/edit_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/profile_change_male_text"
            android:textSize="18sp" />


    </RelativeLayout>


    <TextView
        android:id="@+id/profil_steplength_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch_row"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/profil_steplength"
        android:textSize="26sp" />


    <EditText
        android:id="@+id/editText_steplength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profil_steplength_text"
        android:hint="@string/edit_steplength"
        android:inputType="number" />


    <Button
        android:id="@+id/profil_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/red3"
        android:text="@string/button_add_profil"
        android:textColor="@color/GhostWhite"
        android:textSize="18sp" />


</RelativeLayout>
