<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Button_Height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/DodgerBlue4"
        android:drawableLeft="@drawable/ic_start_button"
        android:text="@string/start_workout_Button"
        android:textColor="@color/GhostWhite"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/main_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startButton"
        android:orientation="horizontal">


        <Button
            android:id="@+id/ergebnisButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/Button_Height"
            android:layout_weight="1"
            android:background="@color/ErgebnisButtonColor"
            android:text="@string/meine_ergebnisse_Button"
            android:textColor="@color/GhostWhite" />

        <Button
            android:id="@+id/profilButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/Button_Height"
            android:layout_weight="1"
            android:background="@color/profilButtonColor"
            android:text="@string/profil_Button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_row_2"
        android:orientation="horizontal">


        <Button
            android:id="@+id/AimsButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/Button_Height"
            android:layout_weight="1"
            android:background="@color/aimButtonColor"
            android:text="@string/aim_Button_text"
            android:textColor="@color/GhostWhite" />


    </LinearLayout>

</RelativeLayout>
