<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.aims_activity">


    <RelativeLayout
        android:id="@+id/add_aims"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_aims_titel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="@string/aims_titel_edit_hint" />

        <EditText
            android:id="@+id/edit_aims_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/edit_aims_titel"
            android:hint="@string/aims_steps_edit_hint" />


        <Button
            android:id="@+id/add_aim_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/aims_addbutton_text" />


    </RelativeLayout>


    <ListView
        android:id="@+id/aims_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ErgebnisButtonColor" />

</LinearLayout>
