<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.start_activity">

    <TextView
        android:id="@+id/number_Steps_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ErgebnisButtonColor"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/anzahl_schritte_view"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/time_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_Steps_View"
        android:background="@color/ErgebnisButtonColor"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/gelaufene_zeit_view"
        android:textSize="20sp" />


    <Button
        android:id="@+id/addActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/red3"
        android:text="@string/stop_workout_Button"
        android:textColor="@color/GhostWhite"
        android:textSize="18sp" />

</RelativeLayout>
