<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_manuelles_tracking_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.mi.ur.de.urfit.Activitys.manuellesTracking_activity">

    <TextView
        android:id="@+id/distance_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/workout_distance"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editText_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distance_done"
        android:inputType="number" />

    <TextView
        android:id="@+id/activity_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_distance"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/time_spent"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editText_time_spent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_time"
        android:inputType="number" />


    <TextView
        android:id="@+id/date_activitiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_time_spent"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:text="@string/activity_date"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/editText_activity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_activitiy"
        android:inputType="date" />


    <Button
        android:id="@+id/addActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/red3"
        android:text="@string/button_add_activity"
        android:textColor="@color/GhostWhite"
        android:textSize="18sp" />

</RelativeLayout>
